SET( KIT dispatch )

FILE( GLOB source ${SOURCE_CODE_BASE_DIR}/${KIT}/test/*_test.cpp )

ADD_EXECUTABLE( ${CMAKE_PROJECT_NAME}_test_${KIT} ${source} )

TARGET_LINK_LIBRARIES( ${CMAKE_PROJECT_NAME}_test_${KIT} ${GTEST_BOTH_LIBRARIES} pthread )

add_test( NAME ${CMAKE_PROJECT_NAME}_test_${KIT} COMMAND ${CMAKE_PROJECT_NAME}_test_${KIT} WORKING_DIRECTORY ${PROJECT_BINARY_DIR}/bin )
